feat:完善表单校验

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -58,17 +58,16 @@
   line-height: 32px;
 }
 
-.relative{
+.relative {
   position: relative;
 }
 
-.flex{
+.flex {
   display: flex;
 }
 
-.form-image{
+.form-image {
   min-width: 100px;
   width: 100px;
-  height: 100px;
-  background: #ddd;
+  // background: #ddd;
 }
