feat:修改样式，优化显示

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -71,3 +71,11 @@
   width: 100px;
   // background: #ddd;
 }
+
+.el-table thead {
+  color: #333;
+}
+
+.el-table th {
+  background-color: #eee;
+}
