--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -79,3 +79,19 @@
 .el-table th {
   background-color: #eee;
 }
+
+.text-bold {
+  font-weight: bold;
+}
+
+.border-bottom {
+  border-bottom: 1px solid #eee;
+}
+
+.border {
+  border: 1px solid #eee;
+}
+
+.radius {
+  border-radius: 10px;
+}
